More routes added to the website

--- a/views/about-partners.ejs
+++ b/views/about-partners.ejs
@@ -29,87 +29,56 @@
                 <div class="row">
                     <div class=" text-justify col-md-8">
 
-                        <h1>Our Investors</h1>
+                        <h1>Our Technical Partners</h1>
 
                         <div class="client-logo row space-top-md">
                             <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
-                                <a href="https://www.berkhamcapital.com/" target="_new">
-                                    <img alt=""
-                                        src="https://irp-cdn.multiscreensite.com/cb78afca/dms3rep/multi/mobile/Berkham+Capital+Logo+1.jpg">
+                                <a href="https://www.rscmme.com/" target="_new">
+                                    <img alt="" src="https://www.rscmme.com/wp-content/uploads/2017/02/logo.png">
                                 </a>
                             </div>
                             <div class="col-sm-8 col-xs-12">
                                 <p>
-                                    <strong>Berkham Capital</strong> is a global business development company,
-                                    incorporated in England,
-                                    United Kingdom, with global service offerings in transaction advisory, consulting
-                                    services, transaction structuring, global finance solutions, alternative finance
-                                    solutions, investment solutions, business development and project development
-                                    solutions, which we offer to companies worldwide, from our office in London, United
-                                    Kingdom.
+                                    <strong>RSC</strong> provides geological consulting, exploration management and
+                                    contract geological
+                                    services to the global mining and exploration industry. For more information and
+                                    specific detail on what we can do for you, please visit our services pages. Our team
+                                    includes geologists, geophysicists, geochemists, resource professionals, project
+                                    managers, data management and GIS professionals.
+
+                                    <strong>RSC</strong> has experience in all stages of the mining cycle, from early
+                                    stage exploration
+                                    through to development, and initial production, on and to full-scale operation. We
+                                    have worked in a wide range of locations with a variety of commodities, both on and
+                                    offshore. Our head offices are based in New Zealand and Australia, with support
+                                    offices in Mongolia, Zimbabwe and Mali.
                                 </p>
-                                <a href="https://www.berkhamcapital.com/" target="_new">Berkhamcapital.com</a>
+                                <a href="https://www.rscmme.com/" target="_new">RSC Website</a>
                             </div>
                         </div>
 
                         <div class="client-logo row space-top-md">
                             <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
-                                <a href="http://www.borgglobal.com/home.html" target="_new">
-                                    <img alt="Borg global"
-                                        src="http://nebula.wsimg.com/9d5045b4df17df263276379c12095a9d?AccessKeyId=CE27C4A2838524DE9939&disposition=0&alloworigin=1">
-                                </a>
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-                                <p><strong>Borg global</strong>
-                                    The global project development, funding and business model philosophies of Borg and
-                                    ICG lends themselves to the art of strategic development and the power of
-                                    controlling their own niche-based environments. Strategic development is the name
-                                    given to the most important, difficult, and encompassing challenge that confronts
-                                    any private or public business organization; that is .... how to lay the foundation
-                                    to an innovative group of companies for tomorrow's success while competing and
-                                    positioning itself to win in today's global economy
-                                </p>
-                                <a href="http://www.borgglobal.com/home.html" target="_new">borgglobal.com</a>
-                            </div>
-                        </div>
-                        <div class="client-logo row space-top-md">
-                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
-                                <a href="https://www.mantracgroup.com/" target="_new">
+                                <a href="https://www.ey.com/en_gl/" target="_new">
                                     <img alt=""
-                                        src="http://4.bp.blogspot.com/-23eT257QTvo/VZOdRhHt2lI/AAAAAAAAJsw/vtmBDA3wwSM/s400/Mantrac-CAT-Logo-en-New.jpg">
+                                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZFhbvQEPLppt1abNI06CrvjmIBr6bIwok__9EeAW9j8LxmV6p">
                                 </a>
                             </div>
                             <div class="col-sm-8 col-xs-12">
-                                <p><strong>Mantrac Group</strong> are the authorized Cat dealer in ten countries and
-                                    three continents,
-                                    distributing and supporting the full range of Cat products. We are proud to supply
-                                    the best equipment to the most demanding industries and aim to keep your equipment
-                                    running at peak productivity. </p>
-                                <a href="https://www.mantracgroup.com/" target="_new">Mantrac Group</a>
-                            </div>
-                        </div>
+                                <p>
+                                    As industries converge, they create new value and opportunities for business. EY
+                                    helps organizations identify and capitalize on these new opportunities.
 
+                                    From mobility to health care to future cities, traditional industry boundaries are
+                                    being disrupted, as sectors converge to adapt to technological and societal changes.
 
-                        <div class="client-logo row space-top-md">
-                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
-                                <a href="https://www.sapphirecapitalpartners.co.uk/" target="_new">
-                                    <img alt=""
-                                        src="https://www.sapphirecapitalpartners.co.uk/hs-fs/hubfs/Sapphire%20Logo/Sapphire_Logo_Large_Large.jpg?width=296&name=Sapphire_Logo_Large_Large.jpg">
-                                </a>
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-                                <p><strong>Sapphire Capital Partner</strong> is a multi award winning firm that
-                                    specialises in obtaining SEIS, EIS and
-                                    VCT advance assurance from HMRC.  ￼Sapphire can help business to Quickly obtain
-                                    the HMRC advance assurance for SEIS, EIS and VCT companies, Draft the investor
-                                    documents, Ensure that a company is investment ready, and also give advise on the
-                                    corporate structure.
+                                    Navigating this fast-changing environment requires agility and fresh thinking. As we
+                                    reinvent how we work, live and play, EY is helping clients embrace industry
+                                    disruption as an opportunity.
                                 </p>
-                                <a href="https://www.sapphirecapitalpartners.co.uk" target="_new">Sapphire capital
-                                    Partners</a>
+                                <a href="https://www.ey.com/en_gl" target="_new">Ernst Young</a>
                             </div>
                         </div>
-
 
                         <div class="client-logo row space-top-md">
                             <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
@@ -154,7 +123,7 @@
                                             <span>About Our Firms</span>
                                             <ul>
                                                 <li><a href="about-us.html">Overview</a></li>
-                                                <li class="current"><a href="/about/investors">Our Investors</a></li>
+                                                <li><a href="/about/investors">Our Investors</a></li>
                                                 <li class="current"><a href="/about/technical-partners">Our Technical
                                                         Partners</a></li>
                                                 <li><a href="/about/management-team">Management Team</a></li>
