--- a/views/about.ejs
+++ b/views/about.ejs
@@ -35,7 +35,7 @@
                             company with a
                             specific focus on Zinc Ore, Lead Ore, Copper Ore, the feedstock for their respective
                             smelting. <br>
-                            RCFML is a mining company which engages in the exploration, development and production of
+                            RCF is a mining company which engages in the exploration, development and production of
                             minerals resources properties throughout Nigeria with it principal assets- Keana Mines,
                             Kanam Mines, Rafi Mines, Gurara Mines, Alkaleri Mines , Wase Mines, Ganjuwa Mines, etc
                         </p>
@@ -92,8 +92,108 @@
                             </p>
                         </div>
 
-
                         <div class="clear"></div>
+                        <hr>
+
+                        <h2>Corporate Governace</h2>
+                        <p>
+                            RCF is committed to high standards of corporate governance. It is a fundamental part of the
+                            company’s business practice. The corporate governance statement defines the rights and
+                            responsibilities of the board of directors, institutional investors, private shareholders
+                            and other stakeholders. RCF and its directors and employees are committed to high standards
+                            of business conduct and compliance with the law. These standards and principles are set out
+                            in the RCF code of Business Conduct.
+                            <br>
+                            Auditors : Ernst & Young, Nigeria
+                            The appointment of external auditors (Ernst & Young, Nigeria) is a function of the full
+                            board on the E
+                            recommendation of the Audit & Risk Committee and is subject to approval by shareholders. Any
+                            work to be conducted by the external auditors outside the agreed scope of the Audit is to be
+                            approved by the Audit & Risk Committee.
+                            RA Policy for the rotation of external Audit engagement partners LS
+                            RCF shall select and appoint external auditors and rotate external audit engagement partners
+                            every five years.
+                        </p>
+
+                        <h4> Risk Management, Internal Compliance & Control Systems</h4>
+                        <p>
+                            RCF recognises that all aspects of our business involve significant risk, including both
+                            threats (downside risk) and opportunities (upside risk). We are committed to managing all
+                            sources of risk in a proactive and effective manner through competent risk management. This
+                            requires high quality risk analysis to allow appropriate management decision to be taken at
+                            all levels in the company. A number of systems are in place to identify and manage risk,
+                            these include:
+                            The identification and regular review of all significant business risk facing the company.
+                            The provision of information by management to the board, on a periodic basis, as to the
+                            status of any plans, controls, policies and/or procedures to manage the significant business
+                            risks.
+                            Guidelines for ensuring that capital expenditures and revenue commitments exceeding certain
+                            approved limits are placed before the board for approval.
+                            Limits and controls for all financial exposures, including the uses of derivatives
+                        </p>
+
+                        <h4>Health, Safety & Environment</h4>
+                        <p>The company has established a Health, safety and Environment committee to provide oversight
+                            of RCF’s health, safety and environment risks and responsibilities. Such oversight includes
+                            monitoring the following RCF’s business:
+                            The effectiveness of risk management processes employed in the areas of HSE Compliance with
+                            applicable laws, rules and regulations
+                            Promotion of continuous improvement and company culture in the areas of HSE and, The company
+                            has established a Health, safety and Environment committee to provide oversight of RCF’s
+                            health, safety and environment risks and responsibilities. Such oversight includes
+                            monitoring the following RCF’s business:
+                            The effectiveness of risk management processes employed in the areas of HSE Compliance with
+                            applicable laws, rules and regulations
+                            Promotion of continuous improvement and company culture in the areas of HSE and,
+
+                            The effectiveness of the company HSE processes, policies and standards, programs and
+                            initiatives (See RCF HSE Committee Charter)
+                        </p>
+
+                        <p>
+                            Others include:
+                            <ul class="list-style arrow">
+                                <li>Continuous disclosure Shares trading policy</li>
+                                <li>Board performance and appraisal process in accordance with the requirement of its
+                                    charter,
+                                    the board perform annual evaluation of its performance and sets out the goals and
+                                    objective
+                                    of the Board for the upcoming year.
+                                </li>
+                                <li>Board charter</li>
+                                <li> Audit & risk committee charter</li>
+                                <li> Remuneration committee charter</li>
+                                <li> Compliance sub-committee charter</li>
+                                <li>Schedule of board reserved matter </li>
+                                <li>Director’s conflict policy</li>
+                                <li>HSE committee charter</li>
+                            </ul>
+                        </p>
+
+                        <div class="gaps"></div>
+                        <hr>
+
+                        <h2>Our Philosophy</h2>
+                        <p class="lead">
+                            RCF Minerals limited Philosophy is to operate mines safely by promoting a deeply-rooted
+                            value-based culture, leveraging mining skills developed over the company’s long history, and
+                            by innovating new practices.
+                        </p>
+                        <h4>Our Strategy</h4>
+                        <p>
+                            Our strategy is clear- to develop a responsible company that is attractive to global
+                            investors by
+                        </p>
+                        <p>
+                            Sustaining critical mass – maintaining Lead-Zinc ore production of greater than 40,000TPA
+                            Maintaining a diversified asset base through our portfolio of world-class operating mines.
+                            Ensuring our assets have significant mine lives-improving mines live to greater than five
+                            years through aggressive in-mine and near-mine exploration, targeting total group resources
+                            Maintaining low-cost operations-constantly driving efficiencies and productivity to achieve
+                            all-in sustaining cost.
+                            Upholding strong financial disciplines-continuing to deliver superior results and
+                            maintaining our track record of paying-fully-franked dividends to shareholders.
+                        </p>
 
 
                         <!-- TeamRow #end -->
@@ -118,11 +218,12 @@
                                         <li class="list-heading">
                                             <span>About Our Firms</span>
                                             <ul>
-                                                <li class="current"><a href="about-us.html">Overview</a></li>
-                                                <li><a href="/about/clients">Our clients</a></li>
-                                                <li><a href="/about/management-team">Management Team</a></li>
+                                                <li class="current"><a href="/about">Overview</a></li>
                                                 <li><a href="/about/investors">Our Investors</a></li>
-                                                <li><a href="/about/testimonial">Testimonials</a></li>
+                                                <li><a href="/about/technical-partners">Our Technical
+                                                        Partners</a></li>
+                                                <li><a href="/about/management-team">Management Team</a></li>
+                                                <!-- <li><a href="/about/testimonial">Testimonials</a></li> -->
                                             </ul>
                                         </li>
                                     </ul>
