--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -99,7 +99,7 @@
                             RCF Minerals limited RCF is a newly established Nigerian Natural Resources company with a
                             specific focus on Zinc Ore, Lead Ore, Copper Ore, the feedstock for their respective
                             smelting. <br>
-                            RCFML is a mining company which engages in the exploration, development and production of
+                            RCF is a mining company which engages in the exploration, development and production of
                             minerals resources properties throughout Nigeria with it principal assets- Keana Mines,
                             Kanam Mines, Rafi Mines, Gurara Mines, Alkaleri Mines , Wase Mines, Ganjuwa Mines, etc
                         </p>
