--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,12 +7,14 @@
           <!-- Each Widget -->
           <div class="wgs wgs-footer wgs-text">
             <div class="wgs-content">
-              <p><img src="./imge/logo.jpg" alt="" /></p>
+              <p>
+                <!-- <img src="./imge/logo.jpg" alt="" /> -->
+              </p>
               <p class="text-justify">
                 RCF Minerals limited RCF is a newly established Nigerian Natural
                 Resources company with a specific focus on Zinc Ore, Lead Ore,
                 Copper Ore, the feedstock for their respective smelting. <br />
-                RCFML is a mining company which engages in the exploration,
+                RCF is a mining company which engages in the exploration,
                 development and production of minerals resources properties
                 throughout Nigeria with it principal assets- Keana Mines, Kanam
                 Mines, Rafi Mines, Gurara Mines, Alkaleri Mines , Wase Mines,
@@ -22,13 +24,14 @@
             <p></p>
             <ul class="social">
               <li>
-                <a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a>
+                <a href="https://web.facebook.com/omafumeo"><em class="fa fa-facebook" aria-hidden="true"></em></a>
               </li>
               <li>
-                <a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a>
+                <a href="#!"><em class="fa fa-twitter" aria-hidden="true"></em></a>
               </li>
               <li>
-                <a href="#"><em class="fa fa-linkedin" aria-hidden="true"></em></a>
+                <a href="https://www.linkedin.com/in/david-omafume-okoro-5ba7b3144/"><em class="fa fa-linkedin"
+                    aria-hidden="true"></em></a>
               </li>
             </ul>
           </div>
