--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,11 +2,33 @@
 <html lang="en">
 
 <head>
-    <title>RCF Mineral Limited - Minerals Mining</title>
+    <title><%= h.ucfirst(page) %> | RCF Mineral Limited</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2B9608" />
-    <link rel="icon" href="/image/favicon.png" type="image/png" sizes="16x16">
-    <link rel="stylesheet" type="text/css" href="/css/vendor.bundle.css">
-    <link id="style-css" rel="stylesheet" type="text/css" href="/css/styles.css">
+    <meta name="robots" content="index,follow" />
+    <meta name="og:title" property="og:title"
+        content="RCF Mineral Limited is Solid Mineral and metals exploration company">
+
+    <meta name="description" content="RCF Mineral Limited is Solid Mineral and metals exploration company who focuses
+     on the exploration of Solid Minerals in Commerials Quantity such Copper, Gold, Iron-Ore, Lead, and Zinc, RCF Mineral Limited has
+     Offices both in UK and Nigeria">
+    <meta name="keywords"
+        content="Mineral mining, Solid Minerals, RCF Limited, Gold, Copper, Lead, Zinc,
+     Iron-Ore Export License, 0001558,  Keana Mines, Kanam Mines, Rafi Mines, Gurara Mines, Alkaleri Mines , Wase Mines, Ganjuwa Mines,">
+    <link rel="icon" href="/image/favicon.png" type="image/png" sizes="16x16" />
+    <link rel="stylesheet" type="text/css" href="/css/vendor.bundle.css" />
+    <link id="style-css" rel="stylesheet" type="text/css" href="/css/styles.css" />
+
+
+    <meta property="og:title" content="RCF Mineral Limited is Solid Mineral and metals exploration company" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://www.rcfmineralsltd.com/" />
+    <meta property="og:image" content="https://www.rcfmineralsltd.com/image/mining.jpg" />
+    <meta property="og:description" content="RCF Mineral Limited is Solid Mineral and metals exploration company who focuses
+    on the exploration of Solid Minerals in Commerials Quantity such Copper, Gold, Iron-Ore, Lead, and Zinc, RCF Mineral Limited has
+    Offices both in UK and Nigeria" />
+
 </head>
+
+</html>
