--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,16 +6,18 @@
         </a>
         <div class="header-top">
             <ul class="social social-s2">
-                <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
-                <li><a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
-                <li><a href="#"><em class="fa fa-linkedin" aria-hidden="true"></em></a></li>
+                <li><a href="https://web.facebook.com/omafumeo"><em class="fa fa-facebook" aria-hidden="true"></em></a>
+                </li>
+                <li><a href="#!"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
+                <li><a href="https://www.linkedin.com/in/david-omafume-okoro-5ba7b3144/"><em class="fa fa-linkedin"
+                            aria-hidden="true"></em></a></li>
             </ul>
             <ul class="top-contact">
                 <li class="t-phone t-phone1">
                     <em class="fa fa-phone" aria-hidden="true"></em>
                     <span><a href="#">+234-814-0764-160</a></span>
                 </li>
-                <li class="quote-btn"><a href="contact.html" class="btn">Get a Quote</a></li>
+                <li class="quote-btn"><a href="/" class="btn">Get a Quote</a></li>
             </ul>
         </div>
         <!-- #end Logo -->
@@ -41,10 +43,10 @@
                     <a href="#">About Us</a>
                     <ul class="dropdown-menu">
                         <li><a href="/about">Overview</a></li>
-                        <li><a href="/about/clients">Our Clients</a></li>
                         <li><a href="/about/investors">Our Investors</a></li>
+                        <li><a href="/about/technical-partners">Our Technical Partners</a></li>
                         <li><a href="/about/management-team">Management Team</a></li>
-                        <li><a href="/about/testimonial">Testimonial</a></li>
+                        <!-- <li><a href="/about/testimonial">Testimonial</a></li> -->
                     </ul>
                 </li>
 
@@ -52,7 +54,7 @@
                 <li class="dropdown">
                     <a href="/solutions">What we do</a>
                     <ul class="dropdown-menu">
-                        <li><a href="/services/minerals-mining">Minerals Mining</a></li>
+                        <li><a href="/services/minerals-mining">Minerals, Metals &amp; Mining</a></li>
                         <li><a href="/services/renewable">Renewable Energy Technology</a></li>
                         <li><a href="/services/agriculture">Agriculture</a></li>
                         <li><a href="/services/maritime">Maritime</a></li>
@@ -61,17 +63,17 @@
                     </ul>
                 </li>
 
-                <!-- Project Page -->
+                <!-- Project Page
                 <li class="dropdown">
-                    <a href="solutions.html">Project</a>
+                    <a href="/project">Project</a>
                     <ul class="dropdown-menu">
-                        <li><a href="/ongoing-project">Ongoing Project</a></li>
-                        <li><a href="/completed-project">Complete Project</a></li>
+                        <li><a href="/project/ongoing-project">Ongoing Project</a></li>
+                        <li><a href="/project/completed-project">Complete Project</a></li>
                     </ul>
-                </li>
+                </li>-->
 
                 <!-- Blog Page -->
-                <li><a href="/blog">Blog</a></li>
+                <!-- <li><a href="/blog">Blog</a></li> -->
 
                 <!-- Metal Prices Page -->
                 <li><a href="/metal-prices">Metal Prices</a></li>
