The metals-prices, contact-page, mail features all added

--- a/views/about-investors.ejs
+++ b/views/about-investors.ejs
@@ -72,22 +72,6 @@
                                 <a href="http://www.borgglobal.com/home.html" target="_new">borgglobal.com</a>
                             </div>
                         </div>
-                        <div class="client-logo row space-top-md">
-                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
-                                <a href="https://www.mantracgroup.com/" target="_new">
-                                    <img alt=""
-                                        src="http://4.bp.blogspot.com/-23eT257QTvo/VZOdRhHt2lI/AAAAAAAAJsw/vtmBDA3wwSM/s400/Mantrac-CAT-Logo-en-New.jpg">
-                                </a>
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-                                <p><strong>Mantrac Group</strong> are the authorized Cat dealer in ten countries and
-                                    three continents,
-                                    distributing and supporting the full range of Cat products. We are proud to supply
-                                    the best equipment to the most demanding industries and aim to keep your equipment
-                                    running at peak productivity. </p>
-                                <a href="https://www.mantracgroup.com/" target="_new">Mantrac Group</a>
-                            </div>
-                        </div>
 
 
                         <div class="client-logo row space-top-md">
@@ -100,7 +84,7 @@
                             <div class="col-sm-8 col-xs-12">
                                 <p><strong>Sapphire Capital Partner</strong> is a multi award winning firm that
                                     specialises in obtaining SEIS, EIS and
-                                    VCT advance assurance from HMRC.  ￼Sapphire can help business to Quickly obtain
+                                    VCT advance assurance from HMRC. Sapphire can help business to Quickly obtain
                                     the HMRC advance assurance for SEIS, EIS and VCT companies, Draft the investor
                                     documents, Ensure that a company is investment ready, and also give advise on the
                                     corporate structure.
@@ -111,26 +95,6 @@
                         </div>
 
 
-                        <div class="client-logo row space-top-md">
-                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
-                                <a href="https://www.srk.co.uk/en" target="_new">
-                                    <img alt="" src="https://www.srk.co.uk/sites/default/files/logo.png">
-                                </a>
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-                                <p><strong> SRK Consulting</strong>
-                                    provides professional technical consultancy services to the mining and metals
-                                    sector, encompassing multi-disciplinary technical studies and due diligence for
-                                    mineral assets including exploration through to development, operation and mine
-                                    closure.
-
-                                    Established in 1974, SRK employs more than 1,400 professionals internationally in
-                                    over 45 offices on 6 continents.
-                                </p>
-                                <a href="https://www.srk.co.uk/en" target="_new">SRK Consulting
-                                    Partners</a>
-                            </div>
-                        </div>
 
                         <div class="gaps"></div>
                         <hr>
@@ -155,7 +119,7 @@
                                             <ul>
                                                 <li><a href="about-us.html">Overview</a></li>
                                                 <li class="current"><a href="/about/investors">Our Investors</a></li>
-                                                <li class="current"><a href="/about/technical-partners">Our Technical
+                                                <li><a href="/about/technical-partners">Our Technical
                                                         Partners</a></li>
                                                 <li><a href="/about/management-team">Management Team</a></li>
                                                 <!-- <li><a href="/about/testimonial">Testimonials</a></li> -->
