--- a/views/about-partners.ejs
+++ b/views/about-partners.ejs
@@ -31,6 +31,28 @@
 
                         <h1>Our Technical Partners</h1>
 
+
+                        <div class="client-logo row space-top-md">
+                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
+                                <a href="https://www.srk.co.uk/en" target="_new">
+                                    <img alt="" src="https://www.srk.co.uk/sites/default/files/logo.png">
+                                </a>
+                            </div>
+                            <div class="col-sm-8 col-xs-12">
+                                <p><strong> SRK Consulting UK Limited</strong>
+                                    provides professional technical consultancy services to the mining and metals
+                                    sector, encompassing multi-disciplinary technical studies and due diligence for
+                                    mineral assets including exploration through to development, operation and mine
+                                    closure.
+
+                                    Established in 1974, SRK employs more than 1,400 professionals internationally in
+                                    over 45 offices on 6 continents.
+                                </p>
+                                <a href="https://www.srk.co.uk/en" target="_new">SRK Consulting
+                                    Partners</a>
+                            </div>
+                        </div>
+
                         <div class="client-logo row space-top-md">
                             <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
                                 <a href="https://www.rscmme.com/" target="_new">
@@ -80,26 +102,7 @@
                             </div>
                         </div>
 
-                        <div class="client-logo row space-top-md">
-                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
-                                <a href="https://www.srk.co.uk/en" target="_new">
-                                    <img alt="" src="https://www.srk.co.uk/sites/default/files/logo.png">
-                                </a>
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-                                <p><strong> SRK Consulting</strong>
-                                    provides professional technical consultancy services to the mining and metals
-                                    sector, encompassing multi-disciplinary technical studies and due diligence for
-                                    mineral assets including exploration through to development, operation and mine
-                                    closure.
 
-                                    Established in 1974, SRK employs more than 1,400 professionals internationally in
-                                    over 45 offices on 6 continents.
-                                </p>
-                                <a href="https://www.srk.co.uk/en" target="_new">SRK Consulting
-                                    Partners</a>
-                            </div>
-                        </div>
 
                         <div class="gaps"></div>
                         <hr>
