--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,7 +12,8 @@
             <div class="carousel-inner">
                 <div class="item active">
                     <!-- Set the first background image using inline CSS below. -->
-                    <div class="fill" style="background-image:url('image/slider-mine-a.jpg');">
+                    <div class="fill"
+                        style="background-image:url('https://images.unsplash.com/photo-1505833464198-4993b36cdfab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
                         <div class="banner-content">
                             <div class="container">
                                 <div class="row">
