--- a/views/services-mining.ejs
+++ b/views/services-mining.ejs
@@ -104,11 +104,11 @@
                                             <ul>
                                                 <li class="current"><a href="/services/minerals-mining">Minerals
                                                         Mining</a></li>
-                                                <li><a href="/services/renewable">Renewable Energy Technology</a></li>
-                                                <li><a href="/services/agriculture">Agriculture</a></li>
+                                                <!--<li><a href="/services/renewable">Renewable Energy Technology</a></li>
+                                                 <li><a href="/services/agriculture">Agriculture</a></li>
                                                 <li><a href="/services/maritime">Maritime</a></li>
                                                 <li><a href="/services/aviation">Aviation</a></li>
-                                                <li><a href="/services/oil-and-gas">Oil &amp; Gas Refinery</a></li>
+                                                <li><a href="/services/oil-and-gas">Oil &amp; Gas Refinery</a></li> -->
                                             </ul>
                                         </li>
                                     </ul>
