--- a/views/partials/mailForm.ejs
+++ b/views/partials/mailForm.ejs
@@ -3,39 +3,39 @@
     <div class="wgs-content">
         <p>If you have any questions or would like to book a session please contact us.</p>
         <!-- TODO: NODEMAILER FEATURE -->
-        <form id="contact-us" class="form-quote" action="http://demo.themenio.com/industrial/form/contact.php"
-            method="post" novalidate="novalidate">
+        <form id="contact-us" class="form-quote" action="/send" method="post">
+            <%= %>
             <div class="form-results"></div>
             <div class="form-group">
                 <div class="form-field">
-                    <input name="contact-name" type="text" placeholder="Name *" class="form-control required"
+                    <input name="contact_name" type="text" placeholder="Name *" class="form-control required"
                         aria-required="true">
                 </div>
             </div>
             <div class="form-group">
                 <div class="form-field">
-                    <input name="contact-email" type="email" placeholder="Email *" class="form-control required email"
+                    <input name="contact_company" type="text" placeholder="Company *" class="form-control required"
+                        aria-required="true">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-field">
+                    <input name="contact_email" type="email" placeholder="Email *" class="form-control required email"
                         aria-required="true">
                 </div>
             </div>
             <div class="form-group">
                 <div class="form-field form-m-bttm">
-                    <input name="contact-phone" type="text" placeholder="Phone" class="form-control">
+                    <input name="contact_phone" type="text" placeholder="Phone" class="form-control">
                 </div>
             </div>
             <div class="form-group">
                 <div class="form-field">
-                    <input name="contact-service" type="text" placeholder="Interest of Service" class="form-control">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="form-field">
-                    <textarea name="contact-message" placeholder="Messages *" class="txtarea form-control required"
+                    <textarea name="contact_message" placeholder="Messages *" class="txtarea form-control required"
                         aria-required="true"></textarea>
                 </div>
             </div>
-            <input type="text" class="hidden" name="form-anti-honeypot" value="">
-            <button type="submit" class="btn btn-alt sb-h">Submit</button>
+            <button name="submit" type="submit" class="btn btn-alt sb-h">Submit</button>
         </form>
     </div>
 </div>
